--- a/myproject.csproj
+++ b/myproject.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Common.AITools.Tvbboy">
+      <HintPath>dll\Common.AITools.Tvbboy.dll</HintPath>
+    </Reference>
     <Reference Include="Common.Framework.Tvbboy">
       <HintPath>dll\Common.Framework.Tvbboy.dll</HintPath>
     </Reference>
