login sender email

--- a/App.config
+++ b/App.config
@@ -1,5 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+
+  <!-- 1. 配置节声明 -->
+  <configSections>
+    <section name="autoLoginSettings" type="System.Configuration.NameValueSectionHandler" />
+  </configSections>
+  <!-- 2. 应用设置 -->
+  <appSettings>
+    <add key="AppVersion" value="1.0.0" />
+  </appSettings>
+
+  <!-- 3. 自动登录设置 -->
+  <autoLoginSettings>
+    <add key="RememberCredentials" value="false" />
+    <add key="AutoLogin" value="false" />
+    <add key="Username" value="" />
+    <add key="EncryptedPassword" value="" />
+  </autoLoginSettings>
+  <!-- 4. 连接字符串 -->
   <connectionStrings>
     <add name="ApplicationServices" connectionString="Data Source=202.120.84.252;Initial Catalog=students;User ID=stu;Password=123456;"/>
     <add name="ApplicationServicesbak" connectionString="Data Source=222.204.251.67;Initial Catalog=20170829CBDBavBase;User ID=stu;Password=123456;"/>
